# SmartIngest

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  LICENSE  Makefile  README.md  architecture.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: rules.yaml
data/eval/: golden.jsonl  multimodal.jsonl
data/eval/docs/: contract_msa.txt  invoice_acme.txt  invoice_injection.txt  invoice_unknown_vendor.txt  resume_jane.txt
data/samples/: invoice_acme.txt  invoice_unknown_vendor.txt  resume_jane.txt
demo/: README.md
scripts/: capture_demo.py  make_sample_docs.py
src/frontend/: streamlit_app.py
src/smartingest/: __init__.py  api.py  cli.py  config.py  graph.py  llm.py  logging_config.py  models.py  ratelimit.py  rules.py  state.py  store.py  tracing.py  worker.py
src/smartingest/agents/: __init__.py  classifier.py  extractor.py  guardrails.py  router.py  validator.py
src/smartingest/eval/: __init__.py  dataset.py  langsmith_eval.py  metrics.py  runner.py
src/smartingest/guardrails/: __init__.py  grounding.py  injection.py  input_validation.py  pii.py  source.py
tests/: conftest.py  test_api.py  test_eval.py  test_graph.py  test_guardrails.py  test_llm.py  test_ratelimit.py  test_router.py  test_store.py  test_validator.py
