[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "smartingest"
version = "0.1.0"
description = "Agentic document intelligence pipeline (classify, extract, validate, route)."
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    # --- Core orchestration ---
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    # --- LLM provider (Gemini multimodal vision + extraction) ---
    "google-genai>=0.3.0",
    # --- API layer ---
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    # --- Data modeling & config ---
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "PyYAML>=6.0",
    # --- Observability ---
    "langsmith>=0.1.0",
    # --- Frontend ---
    "streamlit>=1.33.0",
    "requests>=2.31.0",
    # --- Utilities ---
    "python-dotenv>=1.0.0",
    "pillow>=10.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
# Opt-in group for regenerating the demo screenshots (heavy; not needed to run
# or test the app). Install with: uv sync --group capture
capture = [
    "playwright>=1.44.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
